style.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background-color: #f4f4f9;
  transition: width 0.5s ease, background-color 0.3s ease;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

header {
  width: 100%;
  padding: 0 1rem;
}

.controls {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  gap: 0.5rem;
  padding: 1rem 0;
}

/* Button hover effect */
.controls button {
  padding: 10px 20px;
  border: none;
  background-color: #007bff;
  color: white;
  cursor: pointer;
  border-radius: 5px;
  transition: background-color 0.3s, transform 0.3s;
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 16px;
}

.controls button:hover {
  background-color: #0056b3;
  transform: translateY(-3px) scale(1.05);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.icon-hover {
  font-family: "Font Awesome 6 Pro";

  transition: all 0.25s ease-in;
}

button:hover .icon-hover {
  font-family: "Font Awesome 6 Pro";
  font-weight: 900;
}

/* Main content padding */
.main-content {
  padding-top: 60px;
}

.gallery-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

/* Gallery container styles */
.gallery-container {
  display: grid;
  gap: 15px;
  padding: 20px;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-auto-rows: 150px;
  grid-auto-flow: dense;
  transition: all 0.5s ease;
}

/* Gallery item styling with overlay */
.gallery-item {
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  border-radius: 8px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.gallery-item:hover img {
  transform: scale(1.1);
  opacity: 0.7;
}

.gallery-item:hover {
  transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
}

/* Overlay styling */
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  opacity: 0;
  transition: opacity 0.3s ease;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #f4f4f9;
  text-align: center;
  border-radius: 8px;
  color: white;
}

.gallery-item:hover .overlay {
  opacity: 1;
}

/* Overlay content styling */
.overlay-content {
  display: flex;
  flex-direction: column;
  align-items: end;
  height: 100%;
  width: 100%;
}

.overlay-content h3 {
  font-size: 0.75rem;
  font-weight: 600;
  color: #fff;
  height: 100%;
}

.overlay-content p {
  font-size: 1rem;
  color: #ddd;
}

.date {
  font-size: 0.75rem;
  color: #bbb;
}

.overlay-content-meta {
  position: relative;
  display: flex;
  align-items: end;
  justify-content: space-between;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  /*   padding: 0 .25rem; */
}
/* .overlay-content-meta .auther{
  display: flex;
  gap: .5rem;
  align-items: center;
  justify-content: left;
} */

.overlay-content-meta i {
  font-size: 0.75rem;
  font-weight: bold;
  display: none;
}

.overlay span.location {
  position: absolute;
  top: 0;
  /*   width: 100%; */
  background-color: white;
  margin-top: 1rem;
  left: 0;
  margin-left: 1rem;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  color: black;
  font-size: 0.75em;
  display: flex;
  gap: 0.5rem;
  align-items: center;
  justify-content: center;
}

.overlay-content-meta-content {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: space-between;
  padding: 0 1rem;
  margin-bottom: 0.5rem;
}

/* Responsive adjustments */
@media (min-width: 768px) {
  .gallery-container {
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-auto-rows: 200px;
  }

  .gallery-item:nth-child(4n) {
    grid-column: span 2;
    grid-row: span 2;
  }

  .gallery-item:nth-child(7n) {
    grid-column: span 3;
    grid-row: span 1;
  }
}

/* Improved mobile responsiveness */
@media (max-width: 480px) {
  .gallery-container {
    grid-template-columns: repeat(2, 1fr);
    grid-auto-rows: 120px;
    gap: 5px;
  }
}

.image-box {
  display: flex;
  flex-direction: column;
  position: relative;
  overflow: hidden;
  position: absolute;
  width: 100%;
  height: 100%;
  transition: transform 1s ease-in-out;
}

